feat(java-eval): add GPT and Randoop comparison artifacts